--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@ethersproject/contracts": "^5.5.0",
+    "@ethersproject/providers": "^5.5.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "moralis": "^0.0.135",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
