--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "@testing-library/user-event": "^12.8.3",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "axios": "^0.24.0",
     "moralis": "^0.0.135",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^0.3.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
